# 18-API/src/modules/items/dto/item-update-status.dto.ts
@@ -7,12 +7,6 @@ export class ItemUpdateSatusDto {
     id: number;
 
     @IsNumber()
-    newStatusId: number;
-
-    @IsNumber()
-    userId: number;
-
-    @IsNumber()
-    userRoleNumber: number;
+    newStatusNumber: number;
 
 };
